--- a/layouts/premium/single.html
+++ b/layouts/premium/single.html
@@ -10,7 +10,7 @@
   				<h2>Economy</h2>
   				<p class="highlight">7/7 crytpo analyst</p>
   				<ul>
-						<li>- Live chat support</li>
+						<li>- Crytpo 102 content</li>
 						<li>- Portfolio design</li>
 					</ul>
 				  <a data-toggle="collapse" href="#collapseEconomy" aria-expanded="false" aria-controls="collapseEconomy">
@@ -27,7 +27,7 @@
 						<h3>$149</h3>
 						<p class="small">3 months</p>
   				</div>
-  				<form action="https://wt-1546b2a2cd9d040b9935724bcca1bcc0-0.run.webtask.io/premium-economy" method="POST">
+  				<form action="https://wt-1546b2a2cd9d040b9935724bcca1bcc0-0.run.webtask.io/premium-economy" method="POST" class="mb-2">
 					  <script
 					    src="https://checkout.stripe.com/checkout.js"
 					    class="stripe-button"
@@ -50,7 +50,7 @@
   				<p class="highlight">All economy features</p>
   				<ul>
 						<li>- 10 ICO reports / month</li>
-						<li>- Crytpo 102 content</li>
+						<li>- Monthly portfolio rebalancing</li>
 					</ul>
 				  <a data-toggle="collapse" href="#collapseBusiness" aria-expanded="false" aria-controls="collapseBusiness">
 				    <i class="fa fa-chevron-circle-down" aria-hidden="true"></i> See more
@@ -66,7 +66,7 @@
 						<h3>$249</h3>
 						<p class="small">6 months</p>
   				</div>
-  				<form action="https://wt-1546b2a2cd9d040b9935724bcca1bcc0-0.run.webtask.io/premium-business" method="POST">
+  				<form action="https://wt-1546b2a2cd9d040b9935724bcca1bcc0-0.run.webtask.io/premium-business" method="POST" class="mb-2">
 					  <script
 					    src="https://checkout.stripe.com/checkout.js"
 					    class="stripe-button"
@@ -105,7 +105,7 @@
 						<h3>$399</h3>
 						<p class="small">12 months</p>
   				</div>
-  				<form action="https://wt-1546b2a2cd9d040b9935724bcca1bcc0-0.run.webtask.io/premium-first-class" method="POST">
+  				<form action="https://wt-1546b2a2cd9d040b9935724bcca1bcc0-0.run.webtask.io/premium-first-class" method="POST" class="mb-2">
 					  <script
 					    src="https://checkout.stripe.com/checkout.js"
 					    class="stripe-button"
