--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -2,6 +2,7 @@
 	padding: 80px 0 50px;
 	background: #333;
 	color: #ecf0f1;
+	font-family: "Montserrat";
 
   .footer-logo {
   	> a {
@@ -50,7 +51,7 @@
 
     a {
     	color: #ecf0f1;
-	    font-size: 16px;
+	    font-size: 15px;
 	    font-weight: 400;
 	    padding: .1875em 0;
 	    margin-bottom: .75em;
