improves landing page mobile design

--- a/src/scss/components/_newsletter-bleed.scss
+++ b/src/scss/components/_newsletter-bleed.scss
@@ -1,6 +1,6 @@
 .newsletter-bleed {
 	margin-top: 60px;
-	height: 250px;
+	min-height: 250px;
 	background: theme-color("primary");
 	color: #FFF;
 	padding-top: 60px;
