--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -10,11 +10,19 @@
 .banner h1 {
   font-size: 70px;
   font-weight: bold;
-  text-shadow: 0px 4px 4px rgba(0,0,0,0.4)
+  text-shadow: 0px 4px 4px rgba(0,0,0,0.4);
+
+	@include media-breakpoint-down(sm) {
+		font-size: 3rem;
+	}
 }
 .banner p {
   font-size: 25px;
   color: #FFF;
   opacity: 0.8;
   margin-bottom: 30px;
+
+	@include media-breakpoint-down(sm) {
+		font-size: 1.2rem;
+	}
 }
