--- a/src/scss/pages/_landing.scss
+++ b/src/scss/pages/_landing.scss
@@ -40,7 +40,7 @@
   width: 80%;
 
 	@include media-breakpoint-down(sm) {
-		width: 90%;
+		width: 100%;
 	}
 
   .titleborder {
@@ -59,7 +59,7 @@
 
   	@include media-breakpoint-down(sm) {
 			font-size: 1rem;
-			margin: 0 40px;
+			margin: 0 20px;
 		}
   }
 }
@@ -67,18 +67,6 @@
 .instructions, .funding-comparison {
 	margin-top: 50px;
 	margin-bottom: 50px;
-}
-
-.instructions {
-	padding-top: 2rem;
-
-	h3 {
-		color: $gray-600;
-	}
-
-	.step:last-child {
-		margin-bottom: 50px;
-	}
 }
 
 .funding-comparison {
@@ -107,10 +95,14 @@
 
 .step, .point {
 
-	h3 {
-		font-size: 2rem;
+	h2 {
     margin: 15px 0;
+		font-size: 2rem;
     font-weight: 500;
+    color: $gray-600;
+  	@include media-breakpoint-down(sm) {
+			font-size: 1.5rem;
+		}
 	}
 
 	p {
