--- a/layouts/premium/single.html
+++ b/layouts/premium/single.html
@@ -2,6 +2,10 @@
 {{ define "header"}} {{ partial "header" .}} {{end}}
 {{ define "main"}}
 
+<div class="top-alert alert alert-info alert-dismissible text-center" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  Click <a href="http://eepurl.com/c4iP41" target="_blank" class="alert-link">here</a> for a 2 days <strong>free trial</strong>
+</div>
 <div class="premium-packs">
   <div class="container">
   	<div class="row no-gutters">
