--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -18,7 +18,7 @@
 				<h3 class="footer-nav-title">Useful Links</h3>
 				<ul class="footer-nav">
 					<li><a href="/rating-framework/">Rating Framework</a></li>
-					<li><a href="/token-sale-variables/">Token Sale Variables</a></li>
+					<li><a href="/variable-description/">Variable Description</a></li>
 					<li><a href="/disclaimer/">Disclaimer</a></li>
 				</ul>
 			</div>
