--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,7 +8,7 @@
     <h1>{{.Title }}</h1>
       <p>{{.Params.description}}</p>
   </div>
-  <div class="content">
+  <div class="content mb-5">
 
    {{ .Content }}
 
