--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -57,7 +57,7 @@
   font-family: "Montserrat";
 }
 .navbar-tropyc-link:hover {
-  color: $orange;
+  color: theme-color("primary");
   text-decoration: none;
 }
 
