--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 
 @import 'base/base';
 @import 'base/fonts';
+@import 'base/tables';
 @import 'components/banner';
 @import 'components/hero';
 @import 'components/token-table';
