design changes, adds list template for crypto 101 sub sections

--- a/layouts/crypto-101/list.html
+++ b/layouts/crypto-101/list.html
@@ -10,11 +10,48 @@
     </p>
   </div>
 </div>
-<div class="crypto-101">
-	<div class="container">
-		<div class="row no-gutters">
-			{{ range first 3 .Sections }}
-				<div class="col-xs-12 col-md-4">
+{{ if .Sections }}
+	<div class="crypto-all">
+		<div class="container">
+			<div class="row no-gutters">
+				{{ range first 3 .Sections }}
+					<div class="col-xs-12 col-md-4">
+						<div class="section {{ (printf "%s-section" .Title | urlize) }} d-flex flex-column justify-content-around align-items-center mb-3">
+							<img class="img-fluid" src="/images/{{ index $.Site.Data.images.hash (printf "crypto-101/summary-icons/%s.svg" .Params.image) }}">
+							<h2>{{ .Title }}</h2>
+							<ul>
+								{{ range .Data.Pages.ByDate }}
+								<li><a href="{{ .URL }}">{{ .Title }}</a></li>
+								{{ end }}
+							</ul>
+						</div>
+					</div>
+				{{ end }}
+			</div>
+			<h2 class="seperator-header">Go to 102.</h2>
+			<div class="row no-gutters">
+				{{ range last 3 .Sections }}
+					<div class="col-xs-12 col-md-4">
+						<div class="section {{ (printf "%s-section" .Title | urlize) }} d-flex flex-column justify-content-around align-items-center mb-3">
+							<img class="img-fluid" src="/images/{{ index $.Site.Data.images.hash (printf "crypto-101/summary-icons/%s.svg" .Params.image) }}">
+							<h2>{{ .Title }}</h2>
+							<ul>
+								{{ range .Data.Pages.ByDate }}
+								<li><a class="disabled" href="#" disabled>{{ .Title }} <i class="fa fa-ticket" aria-hidden="true"></i></a></li>
+								{{ end }}
+							</ul>
+						</div>
+					</div>
+				{{ end }}
+			</div>
+			<p class="premium-content"><i class="fa fa-ticket" aria-hidden="true"></i> Premium Content - Go premium to access this content</p>
+		</div>
+	</div>
+{{ else }}
+	<div class="crypto-section">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-6">
 					<div class="section {{ (printf "%s-section" .Title | urlize) }} d-flex flex-column justify-content-around align-items-center mb-3">
 						<img class="img-fluid" src="/images/{{ index $.Site.Data.images.hash (printf "crypto-101/summary-icons/%s.svg" .Params.image) }}">
 						<h2>{{ .Title }}</h2>
@@ -25,27 +62,10 @@
 						</ul>
 					</div>
 				</div>
-			{{ end }}
+			</div>
 		</div>
-		<h2 class="seperator-header">Go to 102.</h2>
-		<div class="row no-gutters">
-			{{ range last 3 .Sections }}
-				<div class="col-xs-12 col-md-4">
-					<div class="section {{ (printf "%s-section" .Title | urlize) }} d-flex flex-column justify-content-around align-items-center mb-3">
-						<img class="img-fluid" src="/images/{{ index $.Site.Data.images.hash (printf "crypto-101/summary-icons/%s.svg" .Params.image) }}">
-						<h2>{{ .Title }}</h2>
-						<ul>
-							{{ range .Data.Pages.ByDate }}
-							<li><a class="disabled" href="#" disabled>{{ .Title }} <i class="fa fa-ticket" aria-hidden="true"></i></a></li>
-							{{ end }}
-						</ul>
-					</div>
-				</div>
-			{{ end }}
-		</div>
-		<p class="premium-content"><i class="fa fa-ticket" aria-hidden="true"></i> Premium Content - Go premium to access this content</p>
 	</div>
-</div>
+{{ end }}
 
 {{ end }}
 
