--- a/layouts/premium/single.html
+++ b/layouts/premium/single.html
@@ -6,7 +6,8 @@
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
   Click <a href="http://eepurl.com/c4iP41" target="_blank" class="alert-link">here</a> for a 2 days <strong>free trial</strong>
 </div> -->
-<div class="premium-packs">
+<h1 class="text-center my-5">Coming Soon !</h1>
+<!-- <div class="premium-packs">
   <div class="container">
   	<div class="row no-gutters">
   		<div class="col-xs-12 col-lg-4">
@@ -128,7 +129,7 @@
   		</div>
   	</div>
   </div>
-</div>
+</div> -->
 {{ partial "newsletter-bleed" . }}
 
 {{ end }}
