--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,14 +13,21 @@
     {{ partial "newsletter-banner-form" . }}
   </div>
 </div>
-<div class="title">
+<div class="title top-title">
 	<div class="titleborder"></div>
 	<div class="titlelabel">What is Tropyc Premium ?</div>
 	<div class="titleborder"></div>
 </div>
-<div class="container">
-	<div class="customer-timeline">
-		<img class="img-fluid d-block mx-auto" src="/images/{{ index $.Site.Data.images.hash "landing-page/customer-timeline.png" }}">
+<div class="tropyc-what">
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-lg-10">
+				<h2 class="tropyc-summary">Tropyc premium makes things easier for anyone who’s interested in cryptoeconomics, from beginners to traders.</h2>
+			</div>
+		</div>
+		<div class="customer-timeline">
+			<img class="img-fluid d-block mx-auto" src="/images/{{ index $.Site.Data.images.hash "landing-page/customer-timeline.png" }}">
+		</div>
 	</div>
 </div>
 <div class="title">
@@ -28,7 +35,7 @@
 	<div class="titlelabel">How it works ?</div>
 	<div class="titleborder"></div>
 </div>
-<div class="instructions">
+<div class="tropyc-how">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-6 d-flex flex-column justify-content-around">
@@ -56,7 +63,7 @@
 	<div class="titlelabel">Why tokensales and ICOs ?</div>
 	<div class="titleborder"></div>
 </div>
-<div class="funding-comparison">
+<div class="tropyc-why">
 	<div class="funding-title d-flex flex-column justify-content-center">
 		<h2><span class="text-danger">Startup funds raised</span> vs. <span class="text-success">Initial Coin Offerings</span></h2>
 		<p class="mt-2">in millions of dollars</p>
