--- a/layouts/news/single.html
+++ b/layouts/news/single.html
@@ -17,7 +17,7 @@
 						<div class="article-info">
 							<h3>{{ .Title }}</h3>
 							{{ range .Params.categories }}
-								<div class="btn btn-sm btn-{{ . | lower }} float-right mx-2">{{ . }}</div>
+								<div class="btn btn-sm btn-{{ . | lower }} float-right mx-2">{{ . | upper }}</div>
 							{{ end }}
 		   				<div class="article-meta">{{ partial "article/meta" . }}</div>
 						</div>
