switches payment keys to live

--- a/layouts/premium/single.html
+++ b/layouts/premium/single.html
@@ -6,8 +6,7 @@
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
   Click <a href="http://eepurl.com/c4iP41" target="_blank" class="alert-link">here</a> for a 2 days <strong>free trial</strong>
 </div> -->
-<h1 class="text-center my-5">Coming Soon !</h1>
-<!-- <div class="premium-packs">
+<div class="premium-packs">
   <div class="container">
   	<div class="row no-gutters">
   		<div class="col-xs-12 col-lg-4">
@@ -36,7 +35,7 @@
 					  <script
 					    src="https://checkout.stripe.com/checkout.js"
 					    class="stripe-button"
-					    data-key="pk_test_pa5Ulsn3WF1qkhuuFitTFQpo"
+					    data-key="pk_live_B9lxm0Ca2l6UWGIMsD6lhz2N"
 					    data-image="/images/{{ index $.Site.Data.images.hash "tropyc/tropyc-logo.png" }}"
 					    data-name="Tropyc Premium"
 					    data-description="Subscription - Economy - 3 Months"
@@ -75,7 +74,7 @@
 					  <script
 					    src="https://checkout.stripe.com/checkout.js"
 					    class="stripe-button"
-					    data-key="pk_test_pa5Ulsn3WF1qkhuuFitTFQpo"
+					    data-key="pk_live_B9lxm0Ca2l6UWGIMsD6lhz2N"
 					    data-image="/images/{{ index $.Site.Data.images.hash "tropyc/tropyc-logo.png" }}"
 					    data-name="Tropyc Premium"
 					    data-description="Subscription - Business - 6 Months"
@@ -114,7 +113,7 @@
 					  <script
 					    src="https://checkout.stripe.com/checkout.js"
 					    class="stripe-button"
-					    data-key="pk_test_pa5Ulsn3WF1qkhuuFitTFQpo"
+					    data-key="pk_live_B9lxm0Ca2l6UWGIMsD6lhz2N"
 					    data-image="/images/{{ index $.Site.Data.images.hash "tropyc/tropyc-logo.png" }}"
 					    data-name="Tropyc Premium"
 					    data-description="Subscription - First Class - 12 Months"
@@ -129,7 +128,7 @@
   		</div>
   	</div>
   </div>
-</div> -->
+</div>
 {{ partial "newsletter-bleed" . }}
 
 {{ end }}
