--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -10,13 +10,13 @@
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
 
-  {{ with .Description }}
-	  <meta name="description" content="{{ . }}"> {{ end }}
-	  <!-- noindex meta -->
-	  {{ $default_noindex_kinds := slice "section" "taxonomy" "taxonomyTerm" }}
-	  {{ $noindex_kinds := .Site.Params.noindex_kinds | default $default_noindex_kinds }}
-	  {{ $is_noindex_true := and (isset .Params "noindex") .Params.noindex }}
-	  {{ if or (in $noindex_kinds .Kind) ($is_noindex_true) }}
+  {{ with .Description }}<meta name="description" content="{{ . }}">{{ end }}
+
+  <!-- noindex meta -->
+  {{ $default_noindex_kinds := slice "section" "taxonomy" "taxonomyTerm" }}
+  {{ $noindex_kinds := .Site.Params.noindex_kinds | default $default_noindex_kinds }}
+  {{ $is_noindex_true := and (isset .Params "noindex") .Params.noindex }}
+  {{ if or (in $noindex_kinds .Kind) ($is_noindex_true) }}
 	  <meta name="robots" content="noindex">
   {{ end }}
 
