--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -9,7 +9,7 @@
 <div class="banner" style="background-image: linear-gradient(-180deg, rgba(0,101,168,0.1) 0%, rgba(0,36,61,0.2) 50%), url('/images/landing-page/background.png');">
   <div class="banner-content">
     <h1>{{ .Title }}</h1>
-    <p>{{ .Description }}</p>
+    <p class="my-4"><span id="typed" class="my-5">{{ .Description }}</span></p>
     {{ partial "newsletter-banner-form" . }}
   </div>
 </div>
