--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -35,17 +35,15 @@
 
   {{ partial "favicon" . }}
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="/css/main.css" />
-
 </head>
 <body>
   <header>{{ block "header" . }}{{ end }}</header>
   <main>{{ block "main" . }}{{ end }}</main>
   <footer>{{ block "footer" . }}{{ end }}</footer>
 
+	<script src="https://use.fontawesome.com/197252e4db.js"></script>
   <script src="/js/app.js" type="text/javascript"></script>
-  </script>
 </body>
 
 </html>
