fixes typo on premium page

--- a/site/layouts/premium/single.html
+++ b/site/layouts/premium/single.html
@@ -12,7 +12,7 @@
   		<div class="col-xs-12 col-lg-4">
   			<div class="premium-pack economy-pack d-flex flex-column justify-content-around align-items-center mb-3">
   				<h2>Economy</h2>
-  				<p class="highlight">7/7 crytpo analyst</p>
+  				<p class="highlight">7/7 crypto analyst</p>
   				<ul>
 						<li>- Crytpo 102 content</li>
 						<li>- Portfolio design</li>
