--- a/site/layouts/premium/single.html
+++ b/site/layouts/premium/single.html
@@ -14,7 +14,7 @@
   				<h2>Economy</h2>
   				<p class="highlight">7/7 crypto analyst</p>
   				<ul>
-						<li>- Crytpo 102 content</li>
+						<li>- Crypto 102 content</li>
 						<li>- Portfolio design</li>
 					</ul>
 				  <a data-toggle="collapse" href="#collapseEconomy" aria-expanded="false" aria-controls="collapseEconomy">
