--- a/src/scss/abstracts/_custom.scss
+++ b/src/scss/abstracts/_custom.scss
@@ -55,7 +55,7 @@ $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
-$gray-600: #7F8C8D !default;
+$gray-600: #7f8c8d !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #353536 !default;
@@ -209,7 +209,7 @@ $container-max-widths: (
 // Set the number of columns and specify the width of the gutters.
 
 $grid-columns: 12 !default;
-$grid-gutter-width: 30px !default;
+$grid-gutter-width: 20px !default;
 
 // Components
 //
