--- a/src/scss/components/_exchange-card.scss
+++ b/src/scss/components/_exchange-card.scss
@@ -56,8 +56,10 @@
 	.exchange-specs {
 		padding: 25px;
 
-		.flex-col-1 {
-			font-weight: 500;
+		.col-4 {
+			font-size: 0.9rem;
+			font-family: "Montserrat";
+			color: $gray-600;
 		}
 	}
 }
