--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -37,8 +37,8 @@
 </div>
 <div class="tropyc-how">
 	<div class="container">
-		<div class="row">
-			<div class="col-sm-6 d-flex flex-column justify-content-around">
+		<div class="row justify-content-around">
+			<div class="col-sm-6 col-lg-5 d-flex flex-column justify-content-around">
 					<div class="step">
 						<h2>Step-by-step</h2>
 						<p>We're here to guide you with screenshots and customised support, whether to find your exchange, invest in an ICO or set-up your cold wallet.</p>
@@ -52,7 +52,7 @@
 						<p>Tropyc performs extensive due diligence on tokensales we choose to list. Get a detailed analysis of the best ICOs available on the market.</p>
 					</div>
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-6 col-lg-5">
 				<img class="img-fluid d-block mx-auto" src="/images/landing-page/phone.png">
 			</div>
 		</div>
@@ -69,11 +69,11 @@
 		<p class="mt-2">in millions of dollars</p>
 	</div>
 	<div class="container funding-comparison-container">
-		<div class="row">
-			<div class="col-sm-6 align-self-center">
+		<div class="row justify-content-around">
+			<div class="col-sm-6 col-lg-5 align-self-center">
 				<img class="img-fluid mt-3" src="/images/landing-page/chart.png">
 			</div>
-			<div class="col-sm-6 d-flex flex-column justify-content-around">
+			<div class="col-sm-6 col-lg-5 d-flex flex-column justify-content-around">
 				<div class="point">
 					<h2>Revolution</h2>
 					<p>Tokensales raise more funds than startups as per the 1st of August 2017.</p>
