--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -6,12 +6,12 @@
 }
 
 .content {
-	>h2:not(:first-child) {
+	h2:not(:first-child) {
     margin-top: 3rem;
     margin-bottom: 1rem;
   }
 
-  >h3 {
+  h3 {
     margin-top: 1.5rem;
     margin-bottom: 1rem;
   }
