--- a/src/scss/pages/_landing.scss
+++ b/src/scss/pages/_landing.scss
@@ -76,11 +76,16 @@
 	margin-top: 40px;
 }
 
-.tropyc-how, .tropyc-why {
+.tropyc-how {
 	margin: 40px 0 60px;
+
+	img {
+		max-height: 600px;
+	}
 }
 
 .tropyc-why {
+	margin: 40px 0 60px;
 
 	.funding-title {
 		margin-bottom: 10px;
@@ -118,7 +123,6 @@
 	}
 
 	p {
-		width: 80%;
 		margin: 10px 0 10px 20px;
 		font-size: 1.1rem;
 		font-weight: 300;
