hide news picture on sm for news list

--- a/src/scss/pages/_news-list.scss
+++ b/src/scss/pages/_news-list.scss
@@ -59,6 +59,10 @@
 	    display: table-cell;
 	    vertical-align: middle;
 
+      @include media-breakpoint-down(sm) {
+    		display: none;
+			}
+
 	  	a {
 	    	position: relative;
 	    	display: block;
