adds search, filter and sort to markets and token-sales tables

--- a/site/layouts/markets/list.html
+++ b/site/layouts/markets/list.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="container tokens">
-  <table class="token-table table table-responsive table-striped table-hover">
+  <table id="markets" class="token-table table table-responsive table-striped table-hover">
     <thead>
       <tr>
         <th>Token</th>
