--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
 @import 'components/news-sidebar';
 @import 'components/share-links';
 @import 'components/news-categories-buttons';
+@import 'components/data-tables';
 @import 'pages/landing';
 @import 'pages/news-list';
 @import 'pages/news-single';
