--- a/site/layouts/token-sales/list.html
+++ b/site/layouts/token-sales/list.html
@@ -14,7 +14,7 @@
 </div>
 <div class="container token-sales">
 
-  <table class="token-table table table-responsive table-striped table-hover">
+  <table id="token-sales" class="token-table table table-responsive table-striped table-hover">
     <thead>
       <tr>
         <th>Token</th>
@@ -29,7 +29,7 @@
       </tr>
     </thead>
     <tbody>
-      {{ range (.Data.Pages.ByParam "endDate").Reverse }}
+      {{ range .Data.Pages }}
         <tr>
           <td class="token-name" style="background-image: url('/images/{{ (printf "tokensale-logos/%s-64.png" .Title | urlize) }}');"><a href="{{ .URL }}" class="label-emphasis">{{ .Title }}</a></td>
           <td>{{ partial "rating" .Params.trustRating }}</td>
@@ -38,12 +38,8 @@
           <td>{{ .Params.deal.rows.tokensale.cut }}</td>
           <td>{{ .Params.platform }}</td>
           <td>{{ .Params.industry }}</td>
-          {{ if ((.Params.enddate).After now) }}
-	          <td>{{ .Params.startDate | dateFormat "02/01/2006" }}</td>
-          	<td>{{ .Params.endDate | dateFormat "02/01/2006" }}</td>
-          {{ else }}
-          	<td colspan="2"><span class="ico-ended">Ended</span></td>
-          {{ end }}
+	        <td>{{ .Params.startDate | dateFormat "02/01/2006" }}</td>
+          <td>{{ .Params.endDate | dateFormat "02/01/2006" }}</td>
         </tr>
       {{ end }}
     </tbody>
