changes brand-logo and fix on token sale single page

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <div class="navbar-tropyc">
   <!-- Logo -->
 	<div class="navbar-tropyc-brand">
-		<a href="/" title="home"><img src="/images/tropyc/tropyc-logo-name.png" alt="logo"></a>
+		<a href="/" title="home"><div id="brand-logo"></div></a>
 	</div>
 
   <!-- Right Navigation -->
