--- a/src/scss/components/_token-table.scss
+++ b/src/scss/components/_token-table.scss
@@ -38,16 +38,9 @@
  	font-weight: 600;
  }
 
-  .market-cap {
-  	color: #01bf86;
-  }
-
-  .price {
-  	color: #f9ba48;
-  }
-
   .label-emphasis {
-    font-weight: 400;
+  	color: $blue;
+    font-weight: 600;
   }
 
   .token-social-links {
