--- a/src/scss/components/_data-tables.scss
+++ b/src/scss/components/_data-tables.scss
@@ -1,11 +1,11 @@
-#markets_wrapper {
-	#markets_filter {
+#markets-table_wrapper {
+	#markets-table_filter {
 		text-align: right;
 	}
 }
 
-#token-sales_wrapper {
-	#token-sales_filter {
+#token-sales-table_wrapper {
+	#token-sales-table_filter {
 		text-align: right;
 	}
 }
