--- a/site/layouts/partials/article-featured.html
+++ b/site/layouts/partials/article-featured.html
@@ -1,7 +1,7 @@
 <div class="article-featured">
 	<a href="{{ .URL }}" title="{{ .Title }}">
 		<div class="picture">
-			<img src="/images/{{ (printf "news/%s.png" .Params.image | urlize) }}" alt="{{ .Params.image }}">
+			<img src="{{ (printf "%s" .Params.images | urlize) | relURL }}" alt="{{ .Params.title }}">
 		</div>
 		<div class="article-info">
 			<h3>{{ .Title }}</h3>
