--- a/src/scss/pages/_news-single.scss
+++ b/src/scss/pages/_news-single.scss
@@ -1,54 +1,56 @@
-.article-detail {
-	margin: 45px 0px 90px;
+.news-single {
+	margin: 45px 0 90px;
 
-	.article-hero {
-		position: relative;
-	}
+	.article-detail {
+		.article-hero {
+			position: relative;
+		}
 
-	.picture {
-    float: none;
-    height: auto;
-    min-height: 1px;
-    width: 100%;
+		.picture {
+	    float: none;
+	    height: auto;
+	    min-height: 1px;
+	    width: 100%;
 
-    img {
-    	width: 100%;
-    	height: 400px;
-    	object-fit: cover;
-    }
-	}
+	    img {
+	    	width: 100%;
+	    	height: 350px;
+	    	object-fit: cover;
+	    }
+		}
 
-	.article-info {
-		position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    color: #fff;
-    background: rgba(0,0,0,.6);
-    padding: 15px 20px 15px;
+		.article-info {
+			position: absolute;
+	    bottom: 0;
+	    left: 0;
+	    right: 0;
+	    color: #fff;
+	    background: rgba(0,0,0,.6);
+	    padding: 15px 20px 15px;
 
-    h3 {
-    	font-size: 32px;
-    	text-overflow: ellipsis;
-    	text-shadow: 0 -1px 0 rgba(0,0,0,.65);
-    }
+	    h3 {
+	    	font-size: 32px;
+	    	text-overflow: ellipsis;
+	    	text-shadow: 0 -1px 0 rgba(0,0,0,.65);
+	    }
 
-    .article-meta {
-    	font-size: 16px;
-    	color: $gray-400;
-    }
-	}
+	    .article-meta {
+	    	font-size: 16px;
+	    	color: $gray-400;
+	    }
+		}
 
-	.article-time {
-		font-size: 14px;
-	}
+		.article-time {
+			font-size: 14px;
+		}
 
-	.article-body {
-		margin-top: 40px;
-    margin-bottom: 40px;
-	}
+		.article-body {
+			margin-top: 40px;
+	    margin-bottom: 40px;
+		}
 
-	.article-footer {
-		margin-bottom: 50px;
+		.article-footer {
+			margin-bottom: 50px;
+		}
 	}
 }
